@@ -1342,6 +1342,8 @@ publisherList.config=Configuration
 publisherList.status=Status
 publisherList.noRows=No rows
 
+publisher.monitor.QUEUE_SIZE_MONITOR_ID=Queue size for publisher {0}   
+
 restore.prefix=Restoring ''{0}'': {1}
 restore.created=Created
 restore.updated=Updated
@@ -2256,8 +2258,8 @@ internal.monitor.FILESTORE_PARTITION_TOTAL_SPACE=Filestore partition total space
 internal.monitor.FILESTORE_PARTITION_USABLE_SPACE=Filestore partition usable space (GB)
 internal.monitor.FILESTORE_PARTITION_USED_SPACE=Filestore partition used space (GB)
 internal.monitor.FILESTORE_COUNT=User file stores
-internal.monitor.SYNC_INSERTS_SPEED_COUNTER_ID=Point Value synchronous saves per second
-internal.monitor.ASYNC_INSERTS_SPEED_COUNTER_ID=Point Value asynchronous saves per second
+internal.monitor.SYNC_INSERTS_SPEED_COUNTER_ID=Point value synchronous saves per second
+internal.monitor.ASYNC_INSERTS_SPEED_COUNTER_ID=Point value asynchronous saves per second
 
 java.monitor.JAVA_FREE_MEMORY=JVM free memory (MB)
 java.monitor.JAVA_USED_MEMORY=JVM used memory (MB)
