@@ -4,7 +4,10 @@
 
 package com.serotonin.m2m2.rt.publish.mock;
 
+import com.serotonin.m2m2.rt.dataImage.PointValueTime;
+import com.serotonin.m2m2.rt.publish.PublishQueue;
 import com.serotonin.m2m2.rt.publish.PublisherRT;
+import com.serotonin.m2m2.rt.publish.SendThread;
 import com.serotonin.m2m2.vo.publish.PublisherVO;
 import com.serotonin.m2m2.vo.publish.mock.MockPublishedPointVO;
 
@@ -13,14 +16,15 @@ import com.serotonin.m2m2.vo.publish.mock.MockPublishedPointVO;
  * @author Terry Packer
  */
 public class MockPublisherRT extends PublisherRT<MockPublishedPointVO> {
-
+    PublisherVO<MockPublishedPointVO> vo;
     public MockPublisherRT(PublisherVO<MockPublishedPointVO> vo) {
         super(vo);
+        this.vo = vo;
     }
 
     @Override
     public void initialize() {
-
+        super.initialize(new MockSendThread());
     }
 
     @Override
@@ -28,4 +32,20 @@ public class MockPublisherRT extends PublisherRT<MockPublishedPointVO> {
 
     }
 
+    PublishQueue<MockPublishedPointVO, PointValueTime> getPublishQueue() {
+        return queue;
+    }
+
+
+    class MockSendThread extends SendThread {
+
+        public MockSendThread() {
+            super("MockPublisherRT.SendThread");
+        }
+
+        @Override
+        protected void runImpl() {
+
+        }
+    }
 }
